--- a/Sections/References.tex
+++ b/Sections/References.tex
@@ -4,5 +4,5 @@
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     \section*{References}
     \addcontentsline{toc}{section}{References}
-    \bibliographystyle{style/techpubs}
+    \bibliographystyle{Style/techpubs}
     \bibliography{References}
