--- a/Sections/illustrative example.tex
+++ b/Sections/illustrative example.tex
@@ -77,7 +77,7 @@
 
     The variance, bias, and MSE for each suggested estimator for the sample size of 10 are listed in able.~\ref{table:illustrative_results_10}. It should be noted that, in the MCMC\_IS method, the KDE bandwidth is set to 0.1 and the number of MCMC samples is assumed to be 10,000.
 
-    \input{Tables/Illustrative Example/illustrative_results_10}
+    % \input{Tables/Illustrative Example/illustrative_results_10}
     \input{Tables/Illustrative Example/illustrative_results_100}
 
     Table.~\ref{table:illustrative_results_10} shows that, among the three methods, MCMC-IS has the lowest MSE and variance, while crude-MC has the highest. \\
