--- a/Sections/title.tex
+++ b/Sections/title.tex
@@ -187,12 +187,12 @@
           \fancyhead[l]{\small \pubnumber \\ 
         	\small \pubmonth~\pubyear \\}
         	\fancyfoot[c]{\thepage}
-        \section*{Foreword}
-        OPTIONAL. The foreword is an introductory statement that presents background material or places the report in context. It is usually written by someone other than the creator of the report. The name and affiliation of the foreword author should be listed.
-        \section*{Preface}
-        OPTIONAL. A preface is an introductory statement that announces the purpose and scope of the report, and may acknowledge contributions of those not listed as authors. Material that is not necessary for understanding the report belongs in the preface. 
-        \section*{Acknowledgments}
-        OPTIONAL. Delete if not needed.
+        % \section*{Foreword}
+        % OPTIONAL. The foreword is an introductory statement that presents background material or places the report in context. It is usually written by someone other than the creator of the report. The name and affiliation of the foreword author should be listed.
+        % \section*{Preface}
+        % OPTIONAL. A preface is an introductory statement that announces the purpose and scope of the report, and may acknowledge contributions of those not listed as authors. Material that is not necessary for understanding the report belongs in the preface. 
+        % \section*{Acknowledgments}
+        % OPTIONAL. Delete if not needed.
         \section*{Author Contributions}
         % OPTIONAL: Provide statement on the contributions of each author using the ANSI/NISO Z39.104-2022 CRediT roles taxonomy. This can also be used to inform the sequence of authors on the cover page and in the citation (i.e., authors with more roles are listed first).
         \textbf{\authorone}: Conceptualization, Methodology, Software; \textbf{\authortwo}: Data curation, Writing- Original draft preparation; \textbf{\authorthree}: Visualization, Investigation.
