--- a/Style/preamble.tex
+++ b/Style/preamble.tex
@@ -9,7 +9,7 @@
 % Document class and template package DO NOT DELETE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \documentclass[12pt]{article}
-\usepackage{style/settings}
+\usepackage{Style/settings}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % DRAFT: TRUE OR FALSE?
@@ -51,8 +51,8 @@
 \newcommand{\authortwo}{Author 2}
 \newcommand{\authorthree}{Author 3}
 
-\newcommand{\pubabstract}{REQUIRED. Concise, informative statement of purpose, scope, methods, results, and conclusions/recommendations of the report. Do not include references. Required for indexing and cataloging purposes to assist with discover-ability of the report.}
+\newcommand{\pubabstract}{Resilience analysis of complex systems often involves uncertainty due to factors such as material randomness, demand and structural strength variations, infrastructure failures, dynamic environmental features, and human factors. Uncertainty propagation, a technique to study the impact of uncertain factors on models, involves quantifying output uncertainty resulting from input uncertainty. Monte Carlo (MC) simulation is a popular technique for uncertainty propagation, but its sampling error may affect the reliability of rare event estimates. Importance sampling is a variance reduction technique that can estimate quantities accurately with fewer samples. In this paper, we compare the computational performance of Monte Carlo and importance sampling methods for the reliability analysis of a water distribution network. Specifically, we demonstrate the application of an adaptive importance sampling technique, Markov-Chain Monte Carlo Importance Sampling (MCMC-IS), in comparison with crude Monte Carlo. Our results show that MCMC-IS outperforms crude Monte Carlo in estimating small failure probabilities with fewer samples. This paper provides a valuable resource for resilience analysts and risk assessors who want to use importance sampling to improve the effectiveness of probability of failure estimation.}
 \newcommand{\keywords}{Uncertainty propagation; importance sampling; Monte Carlo; Markov chain Monte Carlo.}
 \newcommand{\publang}{English} %If translation, change to correct language%
 
-\usepackage{style/pdfproperties}
+\usepackage{Style/pdfproperties}
