--- a/Main.tex
+++ b/Main.tex
@@ -1,14 +1,14 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%   	FILL OUT METADATA IN PREAMBLE TEX FILE FIRST
+%   	FILL OUT METADATA IN THE PREAMBLE TEX FILE FIRST
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\input{preamble}
+\input{Style/preamble}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %   	BEGIN DOCUMENT 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
     \urlstyle{rm} % Format style of \url  
     
-    \input{sections/title}
+    \input{Sections/title}
 
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     %   Header text and page numbering
@@ -23,11 +23,11 @@
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     %   Start the body of text - page number starts with "1"
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-    \input{sections/introduction}
-    \input{sections/importance sampling} 
-    \input{sections/illustrative example}
-    \input{sections/reliability analysis of WSN}
-    \input{sections/discussions and recommendations}
-    \input{sections/references} 
+    \input{Sections/introduction}
+    \input{Sections/importance sampling} 
+    \input{Sections/illustrative example}
+    \input{Sections/reliability analysis of WSN}
+    \input{Sections/discussions and recommendations}
+    \input{Sections/references} 
 
 \end{document}
